--- a/src/pybind/mgr/dashboard/base.html
+++ b/src/pybind/mgr/dashboard/base.html
@@ -278,14 +278,25 @@
           </ul>
         </li>
         <li class="treeview{%if path_info.startswith('/rbd')%} active{%endif%}">
-          <a href="#"><i class="fa fa-hdd-o"></i> <span>Block</span>
+          <a href="#">
+            <i class="fa fa-hdd-o"></i> <span>Block</span>
             <span class="pull-right-container">
               <i class="fa fa-angle-left pull-right"></i>
             </span>
           </a>
           <ul class="treeview-menu menu-open">
-            <li rv-each-pool="rbd_pools">
-                <a rv-href="pool.url">{pool.name}</a>
+            <li class="treeview{%if path_info.startswith('/rbd_pool')%} active menu-open{%endif%}">
+              <a href="#">
+                <i class="fa fa-dot-circle-o"></i> <span>Pools</span>
+                <span class="pull-right-container">
+                  <i class="fa fa-angle-left pull-right"></i>
+                </span>
+              </a>
+              <ul class="treeview-menu">
+                <li rv-each-pool="rbd_pools">
+                  <a rv-href="pool.url"><i class="fa fa-circle-o"></i> {pool.name}</a>
+                </li>
+              </ul>
             </li>
             <li class="ceph-none-found" rv-hide="rbd_pools | length">None found</li>
           </ul>
