--- a/src/pybind/mgr/dashboard/rbd_pool.html
+++ b/src/pybind/mgr/dashboard/rbd_pool.html
@@ -8,7 +8,7 @@
             var content_data = {{ content_data }};
 
             var refresh = function() {
-                $.get("/rbd_data/" + content_data.pool_name  + "/", function(data) {
+                $.get("/rbd_pool_data/" + content_data.pool_name  + "/", function(data) {
                     content_data.images = data;
                     setTimeout(refresh, 5000);
                 });
@@ -24,7 +24,7 @@
 
 <section class="content-header">
     <h1>
-        RBD
+        Block Pool { pool_name }
     </h1>
 </section>
 
