--- a/src/pybind/mgr/dashboard/base.html
+++ b/src/pybind/mgr/dashboard/base.html
@@ -115,6 +115,15 @@
                 return format_number(n, 1024, ['B', 'KiB', 'MiB', 'GiB', 'TiB', 'PiB']);
             };
 
+            rivets.formatters.block_health_color = function(rbd_mirroring) {
+                if (rbd_mirroring.errors > 0) {
+                    return "color: #ff0000";
+                } else if (rbd_mirroring.warnings > 0) {
+                    return "color: #ffc200";
+                }
+                return "";
+            };
+
             rivets.formatters.short_version = function(version) {
                 // Expect "ceph version 1.2.3-g9asdasd (as98d7a0s8d7)"
                 var result = /ceph version\s+([^ ]+)\s+\(.+\)/.exec(version);
@@ -133,6 +142,11 @@
             rivets.formatters.length = function(val) {
               return val.length;
             }
+
+            rivets.formatters.hide_count_box = function(value) {
+                value = +value
+                return (isNaN(value) || value == 0)
+            };
 
             rivets.bind($("#health"), toplevel_data);
             rivets.bind($("section.sidebar"), toplevel_data);
@@ -295,12 +309,21 @@
         </li>
         <li class="treeview{%if path_info.startswith('/rbd')%} active{%endif%}">
           <a href="#">
-            <i class="fa fa-hdd-o"></i> <span>Block</span>
+            <i class="fa fa-hdd-o" rv-style="rbd_mirroring | block_health_color"></i> <span>Block</span>
             <span class="pull-right-container">
               <i class="fa fa-angle-left pull-right"></i>
             </span>
           </a>
           <ul class="treeview-menu menu-open">
+            <li>
+              <a href="/rbd_mirroring">
+                <i class="fa fa-exchange"></i> Mirroring
+                <span class="pull-right-container">
+                    <small rv-hide="rbd_mirroring.warnings | hide_count_box" class="label pull-right bg-yellow">{rbd_mirroring.warnings}</small>
+                    <small rv-hide="rbd_mirroring.errors | hide_count_box" class="label pull-right bg-red">{rbd_mirroring.errors}</small>
+                </span>
+              </a>
+            </li>
             <li class="treeview{%if path_info.startswith('/rbd_pool')%} active menu-open{%endif%}">
               <a href="#">
                 <i class="fa fa-dot-circle-o"></i> <span>Pools</span>
