--- a/src/pybind/mgr/dashboard/base.html
+++ b/src/pybind/mgr/dashboard/base.html
@@ -372,6 +372,12 @@
                 </span>
               </a>
             </li>
+            <li>
+              <a href="/rbd_iscsi">
+                <i class="fa fa-upload"></i> iSCSI
+                <span class="pull-right-container" />
+              </a>
+            </li>
             <li class="treeview{%if path_info.startswith('/rbd_pool')%} active menu-open{%endif%}">
               <a href="#">
                 <i class="fa fa-dot-circle-o"></i> <span>Pools</span>
