pybind: correct raw usage chart's backgroud color
Signed-off-by: Yixing Yan <yanyx@umcloud.com>

--- a/src/pybind/mgr/dashboard/health.html
+++ b/src/pybind/mgr/dashboard/health.html
@@ -159,7 +159,7 @@
                                 content_data.df.stats.total_used_bytes,
                                 content_data.df.stats.total_avail_bytes
                             ],
-                            backgroundColor: ["#424d52", "#222d32"]
+                            backgroundColor: ["#424d52", "#00bb00"]
                             }
                         ]
                     },
